FIxed Snake Overlappin
Still has a overlay, just behind the text

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ img{
   background: transparent;
   color: #899eb5;
         position:absolute;
-    z-index: 99;
+    z-index: -2;
 
 }
 
@@ -123,14 +123,6 @@ img{
 
 }
 
-.page2 #myVideo {
-    right: 0;
-    bottom: 0;
-    min-width: 100%; 
-    min-height: 100%;
-    position:sticky;
-    
-}
 
 /*********************************** PAGE1 2 3********************************/
 .page1{
